# soilingShit

./: .gitignore  _doc_content.txt  succes.txt
.claude/: settings.local.json
pv_diag_adaptive_patch/: CLAUDE.md  README.md  gemini_claude.md  pyproject.toml  run.py
pv_diag_adaptive_patch/data/: clean_soiling_data.xlsx  clean_soiling_data_quality_report.xlsx  generate_demo_data.py  pv_data_preprocessor.py  sample_docs_FM_AL_HIS_ANALYSIS_WITH_TEMPERATURE.JSON  short_preprocessor.py
pv_diag_adaptive_patch/outputs/: clean_soiling_data_diagnostics.xlsx
pv_diag_adaptive_patch/pv_diag/: __init__.py  adaptive_baseline.py  adaptive_baseline_test.py  celltemp.py  classification.py  clustering.py  confidence.py  confidence_test.py  config.py  constants.py  curtailment.py  curtailment_test.py  daily.py  daily_test.py  degradation.py  excel_export.py  ingestion.py  losses.py  orientation.py  pipeline.py  plate.py  plotting.py  quality.py  sdm.py  sdm_test.py  soiling.py  sufficiency.py  transient.py  utils.py  wash_detect.py  wash_detect_test.py
