[project]
name = "iv-curve-soiling-curtailment-v4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pvlib>=0.15.1",
    "pymongo>=4.17.0",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
